--- a/index.html
+++ b/index.html
@@ -2,14 +2,14 @@
 <html lang="en">
 <head>
     <!-- Global site tag (gtag.js) - Google Analytics -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-141911228-2"></script>
+    <!-- <script async src="https://www.googletagmanager.com/gtag/js?id=UA-141911228-2"></script>
     <script>
         window.dataLayer = window.dataLayer || [];
         function gtag(){dataLayer.push(arguments);}
         gtag('js', new Date());
 
         gtag('config', 'UA-141911228-2');
-    </script>
+    </script> -->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
@@ -108,7 +108,6 @@
                     
                 </div>
                 <div class="banner-img-wrap">
-                    <!-- <img src="../assets/img/home.jpeg" alt=""> -->
                 </div>
                 <div class="banner-overlay"></div>
                 <div class="banner-overlay2"></div>
