added contact info

--- a/about/index.html
+++ b/about/index.html
@@ -126,6 +126,9 @@
                                 Increase medical provider/patient education about PrEP/PEP and other HIV prevention interventions.
                         </li>
                     </ul>
+                    <p>
+                        For more information on TCHEP, contact Nagla Elerian at <a href="mailto:nelerian@utsystem.edu">nelerian@utsystem.edu</a>. 
+                    </p>
                 </div>
                 
             </div>
