--- a/index.html
+++ b/index.html
@@ -92,18 +92,18 @@
             <div class="banner">
                 <div id="intro-row" class="home-row d-flex flex-column justify-content-center">
                     <div class="row d-flex flex-column justify-content-center">
-                        <div class="col-lg-7 col-md-12">
+                        <div class="col-lg-8 col-md-12">
                             <h1>The Texas Collaborative for HIV Education and Prevention (TCHEP)</h1>
-                            <h2>Improving health outcomes for individuals at risk for or living with HIV</h2>
+                            <h2>Together We Can End the HIV Epidemic in Texas</h2>
                         </div>
-                        <div id="intro-desc" class="col-lg-5 col-md-12">
+                        <!-- <div id="intro-desc" class="col-lg-5 col-md-12">
                             <p class="desc">
                                 The Texas Collaborative for HIV Education and Prevention (TCHEP) is dedicated to improving the prevention of, and screening for, HIV using evidence-based practices and innovative practices and training methods. The goal is to reduce the number of new HIV infections and ultimately end the HIV epidemic in Texas by advancing evidence-informed clinical HIV preventive practices and processes.
                             </p>
                             <p class="desc">
                                 TCHEP will form two learning collaboratives. One will approach screening and prevention from the perspective of health organizations, and the other from the hospital /primary care perspective.  TCHEP will also conduct surveys and assessments of training curriculum and practices. 
                             </p>
-                        </div>
+                        </div> -->
                     </div>
                     
                 </div>
