--- a/contact/index.html
+++ b/contact/index.html
@@ -73,8 +73,8 @@
                             </a>
                             <div class="dropdown-menu animate slideIn" >
                                 <a class="dropdown-item" href="../mission-goals/">Mission and Goals</a>
-                                <a class="dropdown-item" href="../staff">Staff and Advisory Committee</a>
-                                <a class="dropdown-item" href="../contact">Contact Us</a>
+                                <!-- <a class="dropdown-item" href="../staff">Staff and Advisory Committee</a> -->
+                                <a class="dropdown-item" href="../contact">Staff and Contact</a>
                             </div>
                         </li>
                         <li class="nav-item dropdown">
@@ -82,11 +82,11 @@
                                 INITIATIVES
                             </a>
                         </li>
-                        <li class="nav-item dropdown">
+                        <!-- <li class="nav-item dropdown">
                             <a class="nav-link" href="#" aria-haspopup="true"  aria-expanded="false">
                                 RESOURCES
                             </a>
-                        </li>
+                        </li> -->
                     </ul>
                 </div>
             </nav>
@@ -95,7 +95,7 @@
         <div class="content">
             <div class="page-row">
                 <h1 class="page-title-noBanner">
-                    Contact us
+                    Staff & Contact
                 </h1>
                 <div class="contact">
                     <p>
@@ -111,9 +111,13 @@
                         Email: <a href="mailto:nelerian@utsystem.edu">nelerian@utsystem.edu</a> 
                     </div>
                     <div class="contact-name">
-                        Media Relations: <br><strong>Daniel Oppenheimer, MFA</strong>, University of Texas Health Science Center at Tylerbr>
+                        Research Associate:<br><strong>Daryl Traylor, MS, MPH, CHES</strong>, University of Texas Health Science Center at Tyler<br>
+                        Email: <a href="mailto:dtraylor@utsystem.edu" >nelerian@utsystem.edu</a> 
+                    </div>
+                    <div class="contact-name">
+                        Media Relations: <br><strong>Daniel Oppenheimer, MFA</strong>, University of Texas Health Science Center at Tyler<br>
                         Email: <a href="mailto:doppenheimer@utsystem.edu">doppenheimer@utsystem.edu</a> <br>
-                        Phone: (512) 852-3269
+                        Phone: <a href="tel:(512) 852-3269">(512) 852-3269</a>
                     </div>
                 </div>
                 
