--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                             </a>
                             <div class="dropdown-menu animate slideIn" >
                                 <a class="dropdown-item" href="./mission-goals">Mission and Goals</a>
-                                <a class="dropdown-item" href="./staff">Staff and Advisory Committee</a>
+                                <!-- <a class="dropdown-item" href="./staff">Staff and Advisory Committee</a> -->
                                 <a class="dropdown-item" href="./contact">Contact Us</a>
                             </div>
                         </li>
@@ -82,11 +82,11 @@
                                 INITIATIVES
                             </a>
                         </li>
-                        <li class="nav-item dropdown">
+                        <!-- <li class="nav-item dropdown">
                             <a class="nav-link" href="#" aria-haspopup="true"  aria-expanded="false">
                                 RESOURCES
                             </a>
-                        </li>
+                        </li> -->
                     </ul>
                 </div>
             </nav>
