--- a/mission-goals/index.html
+++ b/mission-goals/index.html
@@ -73,8 +73,8 @@
                             </a>
                             <div class="dropdown-menu animate slideIn" >
                                 <a class="dropdown-item" href="#">Mission and Goals</a>
-                                <a class="dropdown-item" href="../staff">Staff and Advisory Committee</a>
-                                <a class="dropdown-item" href="../contact">Contact Us</a>
+                                <!-- <a class="dropdown-item" href="../staff">Staff and Advisory Committee</a> -->
+                                <a class="dropdown-item" href="../contact">Staff and Contact</a>
                             </div>
                         </li>
                         <li class="nav-item dropdown">
@@ -82,11 +82,11 @@
                                 INITIATIVES
                             </a>
                         </li>
-                        <li class="nav-item dropdown">
+                        <!-- <li class="nav-item dropdown">
                             <a class="nav-link" href="#" aria-haspopup="true"  aria-expanded="false">
                                 RESOURCES
                             </a>
-                        </li>
+                        </li> -->
                     </ul>
                 </div>
             </nav>
