--- a/index.html
+++ b/index.html
@@ -68,13 +68,13 @@
                     <ul class="navbar-nav ml-auto">
                     
                         <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" href="#"  aria-haspopup="true" aria-expanded="false">
+                            <a class="nav-link dropdown-toggle" href="#"   aria-haspopup="true" aria-expanded="false">
                             ABOUT
                             </a>
                             <div class="dropdown-menu animate slideIn" >
                                 <a class="dropdown-item" href="./mission-goals">Mission and Goals</a>
                                 <!-- <a class="dropdown-item" href="./staff">Staff and Advisory Committee</a> -->
-                                <a class="dropdown-item" href="./contact">Contact Us</a>
+                                <a class="dropdown-item" href="./contact">Staff and Contact</a>
                             </div>
                         </li>
                         <li class="nav-item dropdown">
