--- a/contact/index.html
+++ b/contact/index.html
@@ -68,7 +68,7 @@
                     <ul class="navbar-nav ml-auto">
                     
                         <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" href="#"  aria-haspopup="true" aria-expanded="false">
+                            <a class="nav-link dropdown-toggle" href="#" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                             ABOUT
                             </a>
                             <div class="dropdown-menu animate slideIn" >
