--- a/contact/index.html
+++ b/contact/index.html
@@ -112,7 +112,7 @@
                     </div>
                     <div class="contact-name">
                         Research Associate:<br><strong>Daryl Traylor, MS, MPH, CHES</strong>, University of Texas Health Science Center at Tyler<br>
-                        Email: <a href="mailto:dtraylor@utsystem.edu" >nelerian@utsystem.edu</a> 
+                        Email: <a href="mailto:dtraylor@utsystem.edu" >dtraylor@utsystem.edu</a> 
                     </div>
                     <div class="contact-name">
                         Media Relations: <br><strong>Daniel Oppenheimer, MFA</strong>, University of Texas Health Science Center at Tyler<br>
