--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                             </div>
                         </li>
                         <li class="nav-item dropdown">
-                            <a class="nav-link" href="./initiatives/"aria-haspopup="true" data-toggle="dropdown" aria-expanded="false">
+                            <a class="nav-link" href="./initiatives"aria-haspopup="true" data-toggle="dropdown" aria-expanded="false">
                                 INITIATIVES
                             </a>
                         </li>
