--- a/index.html
+++ b/index.html
@@ -116,6 +116,8 @@
                 <div class="banner-overlay"></div>
                 <div class="banner-overlay2"></div>
             </div>
+            <!-- <div class="story">
+            </div> -->
     
         </div><!-- .content-->
     </div><!-- #content-->
