first edits on overview

--- a/overview/index.html
+++ b/overview/index.html
@@ -98,7 +98,13 @@
                     An Overview of HIV In Texas
                 </h1>
                 <p class="story-intro">
-                    Lorem ipsum dolor sipis. Nunc finibus rhoncus pre. mattis vitae, volutpat vel justo. Fusce volutpat, enim sit amet eleifend ultricies, nunc nulla aliquet justo, eu finibus enim elit ac magna. Vestibulum molestie, sem in facilisis ornare, dolor erat laoreet dolor, condimentum pretium diam est eu metus. Sed sit amet purus sit amet dolor laoreet aliquam in in diam. Aenean ac dolor at tellus varius rutrum.
+                    Texas has the eighth highest rate of new HIV diagnoses in the US and its dependent territories, with a new diagnosis rate of 15.7/100,000 people in 2018. That represents a decrease from 2009, but most of that decrease had occurred by 2013, leaving the rate stable for the last five years of data. 
+                </p>
+                <p class="story-intro">
+                    The overall rate also obscured considerable geographic, racial/ethnic, age and gender disparities. Rates of new HIV diagnoses are highest among males (26.0/100,000), Blacks (46.0/100,000), and those between 25 and 29 years of age (45.2/100,000), and the greatest increase in the proportion of new HIV diagnoses was among Hispanic MSM, from 23.6% to 30.3% of new diagnoses. 
+                </p>
+                <p class="story-intro">
+                    The maps and charts below represent a brief overview of these rates, trends, and disparities. 
                 </p>
                 <hr>
                 <div class="story">
@@ -126,28 +132,30 @@
                     </h2>
                     <img src="../assets/img/overview/priority-counties.png" alt="">
                     <ul>
-                        <li>Although Texas is not one of the states with the heaviest HIV burden, it is one of the hardest hit states with 5 counties that have been identified with the highest number of new HIV diagnoses by the CDC. The counties with highest new infection rates are: Bexar County, Dallas County, Harris County, Tarrant County, and Travis County.
+                        <li>
+                            Five counties in Texas have been identified as priority counties by the CDC. These are: Bexar County, Dallas County, Harris County, Tarrant County, and Travis County.
                         </li>
                     </ul>
                     
                     <h2>
-                        Interactive Maps of New Diagnoses & Person Living With HIV Rates in Texas
+                        Interactive Maps of New Diagnosis & Person Living With HIV Rates in Texas
                     </h2>
                     <div class="d-flex justify-content-between">
                     
                         <div class="flourish new-cases">
-                            <h4>New Diagnoses Rates</h4>
+                            <h4>New Diagnosis Rates</h4>
                             <div class="flourish-embed flourish-map" data-src="visualisation/2415205" data-url="https://flo.uri.sh/visualisation/2415205/embed"><script src="https://public.flourish.studio/resources/embed.js"></script></div>
                         </div>
                         <div class="flourish plwh">
-                            <h4>Person Living With HIV Rates</h4>
+                            <h4>Persons Living With HIV Rates</h4>
                             <div class="flourish-embed flourish-map" data-src="visualisation/2593900" data-url="https://flo.uri.sh/visualisation/2593900/embed"><script src="https://public.flourish.studio/resources/embed.js"></script></div>
                         </div>
                     </div>
                     <ul>
-                        <li>Some bullet points</li>
-                        <li>Some bullet points</li>
-                        <li>Some bullet points</li>
+                        <li>Between 2009 and 2018, the total number of PLWH increased by 46% in Texas.</li>
+                        <li>Over half (61%) of people living with HIV (PLWH) acquired it through male-male sexual contact.</li>
+                        <li>By 2018, over half of PLWH were 45 years of age or older.</li>
+                        <li>A majority of people living with HIV live in urban areas of Texas.  The counties with the largest numbers of PLWH were Harris and Dallas, followed by Bexar, Travis, and Tarrant counties.</li>
                     </ul>
 
                     <h2>
