--- a/index.html
+++ b/index.html
@@ -95,8 +95,8 @@
         <div class="content">
             <div class="banner">
                 <div id="intro-row" class="home-row d-flex flex-column justify-content-center">
-                    <div class="row d-flex flex-column justify-content-center">
-                        <div class="col-lg-8 col-md-12">
+                    <div class="row d-flex justify-content-center">
+                        <div class="col-lg-8 col-md-12 align-self-center">
                             <h1>The Texas Collaborative for HIV Education and Prevention (TCHEP)</h1>
                             <h2>Together We Can End the HIV Epidemic in Texas</h2>
                         </div>
@@ -108,6 +108,15 @@
                                 TCHEP will form two learning collaboratives. One will approach screening and prevention from the perspective of health organizations, and the other from the hospital /primary care perspective.  TCHEP will also conduct surveys and assessments of training curriculum and practices. 
                             </p>
                         </div> -->
+                        <div class="col-lg-4 col-sm-6 col-md-8 overview-ad">
+                            
+                            <div class="flourish-embed flourish-map" data-src="visualisation/2415205" data-url="https://flo.uri.sh/visualisation/2415205/embed"><script src="https://public.flourish.studio/resources/embed.js"></script></div>
+                            <a class="overview-link"href="./overview/index.html">
+                                <h3>
+                                    an overview of HIV in Texas
+                                </h3>
+                            </a>
+                        </div>
                     </div>
                     
                 </div>
