--- a/overview/index.html
+++ b/overview/index.html
@@ -34,7 +34,7 @@
     <link rel="stylesheet" href="../assets/css/styles.css">
     <link rel="stylesheet" href="../assets/css/overview/overview.css">
     <link rel="stylesheet" href="../assets/css/responsive.css">
-    <link rel="stylesheet" href="../assets/css/overview/">
+    <link rel="stylesheet" href="../assets/css/overview/overview-responsive.css">
     
 
     <!-- social share meta tags -->
@@ -113,8 +113,8 @@
                     <h2>
                         New Diagnoses of HIV Infection in 2018 in the US
                     </h2>
-                    <div class="d-flex justify-content-between">
-                        <ul class="story-h col-md-3">
+                    <div class="row d-flex justify-content-between">
+                        <ul class="story-h col-lg-3">
                             <li>
                                 In the United States and 6 dependent areas, the rate of diagnoses of new HIV infection among adults and adolescents was 13.6 per 100,000 population in 2018.
                             </li> 
@@ -128,7 +128,7 @@
                                 The rate of HIV diagnosis in TX is 15.6 per 100,000 population.  
                             </li> 
                         </ul>
-                        <div class="story-h col-md-9">
+                        <div class="story-h col-lg-9">
                             <img  src="../assets/img/overview/us-map.png" alt="">
                         </div>
                     </div>
@@ -139,13 +139,13 @@
                     <h2>
                         Priority Counties in Texas
                     </h2>
-                    <div class="d-flex justify-content-between">
-                        <ul class="story-h col-md-3">
+                    <div class="row d-flex justify-content-between">
+                        <ul class="story-h col-lg-3">
                             <li>
                                 Five counties in Texas have been identified as priority counties by the CDC. These are: Bexar County, Dallas County, Harris County, Tarrant County, and Travis County.
                             </li>
                         </ul>
-                        <div class="story-h col-md-9">
+                        <div class="story-h col-lg-9">
                             <img src="../assets/img/overview/priority-counties.png" alt="">
                         </div>
                     </div>
@@ -158,19 +158,19 @@
                     <h2>
                         Interactive Maps of New Diagnosis & Person Living With HIV Rates in Texas
                     </h2>
-                    <div class="d-flex justify-content-between">
-                        <ul class="story-h col-md-3">
+                    <div class="row d-flex justify-content-between">
+                        <ul class="story-h col-lg-3">
                             <li>Between 2009 and 2018, the total number of PLWH increased by 46% in Texas.</li>
                             <li>Over half (61%) of people living with HIV (PLWH) acquired it through male-male sexual contact.</li>
                             <li>By 2018, over half of PLWH were 45 years of age or older.</li>
                             <li>A majority of people living with HIV live in urban areas of Texas.  The counties with the largest numbers of PLWH were Harris and Dallas, followed by Bexar, Travis, and Tarrant counties.</li>
                         </ul>
-                        <div class="story-h col-md-9 d-flex justify-content-between">
-                            <div class="flourish new-cases">
+                        <div class="row story-h col-lg-9 d-flex justify-content-between">
+                            <div class="flourish new-cases col-lg-6">
                                 <h4>New Diagnosis Rates</h4>
                                 <div class="flourish-embed flourish-map" data-src="visualisation/2415205" data-url="https://flo.uri.sh/visualisation/2415205/embed"><script src="https://public.flourish.studio/resources/embed.js"></script></div>
                             </div>
-                            <div class="flourish plwh">
+                            <div class="flourish plwh col-lg-6">
                                 <h4>Persons Living With HIV Rates</h4>
                                 <div class="flourish-embed flourish-map" data-src="visualisation/2593900" data-url="https://flo.uri.sh/visualisation/2593900/embed"><script src="https://public.flourish.studio/resources/embed.js"></script></div>
                             </div>
@@ -183,21 +183,21 @@
                     <h2>
                         New Diagnoses Rates Trends in Texas
                     </h2>
-                    <div class="d-flex justify-content-between">
+                    <div class="row d-flex justify-content-between">
                         <!-- <ul class="story-h col-md-0">
                         </ul> -->
-                        <div class="story-h col-md-12 d-flex justify-content-between">
-                            <div class="col-md-6">
+                        <!-- <div class="row story-h col-md-12 d-flex justify-content-between"> -->
+                            <div class="col-lg-6">
                                 <h4>New Diagnoses Rates in Texas 2007 - 2017 (overall)</h4>
                                 <!-- <div class=""> -->
                                     <img src="../assets/img/overview/new-trend.png" alt="">
                                 <!-- </div> -->
                             </div>
-                            <div class="col-md-6">
+                            <div class="col-lg-6">
                                 <h4>New HIV Diagnosis Rates by Race/Ethnicity and Year of Diagnosis, 2009-2018</h4>
                                 <img src="../assets/img/overview/v2highfimockups-4.png" alt="">
                             </div>
-                        </div>
+                        <!-- </div> -->
                         
                     </div>
                 </div>
@@ -206,12 +206,12 @@
                     <h2>
                         New Diagnoses Rates in Texas by Age & Race, 2018
                     </h2>
-                    <div class="story-h col-md-12 d-flex justify-content-between">
-                        <div class="col-md-6">
+                    <div class="row story-h col-md-12 d-flex justify-content-between">
+                        <div class="col-lg-6">
                             <h4>New HIV Diagnisis Rates by Age at Diagnosis, 2018</h4>
                             <img src="../assets/img/overview/v2highfimockups-5.png" alt="">
                         </div>
-                        <div class="col-md-6">
+                        <div class="col-lg-6">
                             <h4>HIV Prevalence Rate by Race/Ethnicity, 2018</h4>
                             <img src="../assets/img/overview/v2highfimockups-6.png" alt="">
                         </div>
