--- a/index.html
+++ b/index.html
@@ -109,8 +109,8 @@
                             </p>
                         </div> -->
                         <div class="col-lg-4 col-sm-6 col-md-8 overview-ad">
-                            
-                            <div class="flourish-embed flourish-map" data-src="visualisation/2415205" data-url="https://flo.uri.sh/visualisation/2415205/embed"><script src="https://public.flourish.studio/resources/embed.js"></script></div>
+                            <img src="./assets/img/overview/banner2.png" alt="">
+                            <!-- <div class="flourish-embed flourish-map" data-src="visualisation/2415205" data-url="https://flo.uri.sh/visualisation/2415205/embed"><script src="https://public.flourish.studio/resources/embed.js"></script></div> -->
                             <a class="overview-link"href="./overview/index.html">
                                 <h3>
                                     an overview of HIV in Texas
