--- a/overview/index.html
+++ b/overview/index.html
@@ -122,9 +122,6 @@
                                 The rate of diagnoses of new HIV infection for adults and adolescents ranged from zero per 100,000 in American Samoa and the Republic of Palau to 34.6 per 100,000 in the District of Columbia.
                             </li> 
                             <li>
-                                The District of Columbia (i.e., Washington, DC) is a city; use caution when comparing the HIV diagnosis rate in DC with the rates in the states.
-                            </li> 
-                            <li>
                                 The rate of HIV diagnosis in TX is 15.6 per 100,000 population.  
                             </li> 
                         </ul>
@@ -190,12 +187,12 @@
                             <div class="col-lg-6">
                                 <h4>New Diagnoses Rates in Texas 2007 - 2017 (overall)</h4>
                                 <!-- <div class=""> -->
-                                    <img src="../assets/img/overview/new-trend.png" alt="">
+                                    <img src="../assets/img/overview/tables1.png" alt="">
                                 <!-- </div> -->
                             </div>
                             <div class="col-lg-6">
                                 <h4>New HIV Diagnosis Rates by Race/Ethnicity and Year of Diagnosis, 2009-2018</h4>
-                                <img src="../assets/img/overview/v2highfimockups-4.png" alt="">
+                                <img src="../assets/img/overview/tables2.png" alt="">
                             </div>
                         <!-- </div> -->
                         
@@ -204,16 +201,31 @@
 
                 <div class="story-sec">
                     <h2>
-                        New Diagnoses Rates in Texas by Age & Race, 2018
+                        New Diagnoses Rates in Texas, 2018
                     </h2>
                     <div class="row story-h col-md-12 d-flex justify-content-between">
                         <div class="col-lg-6">
                             <h4>New HIV Diagnisis Rates by Age at Diagnosis, 2018</h4>
-                            <img src="../assets/img/overview/v2highfimockups-5.png" alt="">
+                            <img src="../assets/img/overview/bar1.png" alt="">
                         </div>
                         <div class="col-lg-6">
                             <h4>HIV Prevalence Rate by Race/Ethnicity, 2018</h4>
-                            <img src="../assets/img/overview/v2highfimockups-6.png" alt="">
+                            <img src="../assets/img/overview/bar2.png" alt="">
+                        </div>
+                    </div>
+                </div>
+                <div class="story-sec">
+                    <!-- <h2>
+                        New Diagnoses Rates in Texas by Age & Race, 2018
+                    </h2> -->
+                    <div class="row story-h col-md-12 d-flex justify-content-between">
+                        <div class="col-lg-6">
+                            <h4>HIV Prevalence Rate by Age, 2018</h4>
+                            <img src="../assets/img/overview/bar3.png" alt="">
+                        </div>
+                        <div class="col-lg-6">
+                            <h4>Texas HIV Population Treatment Cascade, 2018</h4>
+                            <img src="../assets/img/overview/bar2.png" alt="">
                         </div>
                     </div>
                 </div>
