--- a/initiatives/index.html
+++ b/initiatives/index.html
@@ -82,6 +82,11 @@
                                 INITIATIVES
                             </a>
                         </li>
+                        <li class="nav-item dropdown">
+                            <a class="nav-link" href="../overview/index.html"aria-haspopup="true" aria-expanded="false">
+                                STATISTICAL OVERVIEW
+                            </a>
+                        </li>
                         <!-- <li class="nav-item dropdown">
                             <a class="nav-link" href="#" aria-haspopup="true"  aria-expanded="false">
                                 RESOURCES
