--- a/index.html
+++ b/index.html
@@ -78,12 +78,12 @@
                             </div>
                         </li>
                         <li class="nav-item dropdown">
-                            <a class="nav-link" href="./overview/index.html"aria-haspopup="true" aria-expanded="false">
+                            <a class="nav-link" href="./initiatives/"aria-haspopup="true" aria-expanded="false">
                                 INITIATIVES
                             </a>
                         </li>
                         <li class="nav-item dropdown">
-                            <a class="nav-link" href="./initiatives"aria-haspopup="true" aria-expanded="false">
+                            <a class="nav-link" href="./overview"aria-haspopup="true" aria-expanded="false">
                                 STATISTICAL OVERVIEW
                             </a>
                         </li>
