added overview graphic

--- a/overview/index.html
+++ b/overview/index.html
@@ -102,11 +102,9 @@
                 <h1 class="page-title-noBanner">
                     An Overview of HIV In Texas
                 </h1>
-                <div class="intro">
-                    <div class="intro-graphic">
-                        <img src="../assets/img/HIVmap-07.svg" alt="">
-                    </div>
-                    <div class="intro-text">
+                <div class="intro d-flex row">
+                    
+                    <div class="intro-text col-sm-12 col-md-7 align-self-center">
                         <p class="story-intro">
                             Texas has the eighth highest rate of new HIV diagnoses in the US and its dependent territories, with a new diagnosis rate of 15.7/100,000 people in 2018. That represents a decrease from 2009, but most of that decrease had occurred by 2013, leaving the rate stable for the last five years of data. 
                         </p>
@@ -116,6 +114,9 @@
                         <p class="story-intro">
                             The maps and charts below represent a brief overview of these rates, trends, and disparities. 
                         </p>
+                    </div>
+                    <div class="intro-graphic col-sm-12 col-md-5 align-self-center">
+                        <img src="../assets/img/HIVmap-07.svg" alt="">
                     </div>
                 </div>
                 
