--- a/overview/index.html
+++ b/overview/index.html
@@ -167,7 +167,7 @@
 
                 <div class="story-sec">
                     <h2>
-                        Interactive Maps of New Diagnosis & Person Living With HIV Rates in Texas
+                        Interactive Maps of New Diagnoses & Persons Living With HIV Rates in Texas
                     </h2>
                     <div class="row d-flex justify-content-between">
                         <ul class="story-h col-lg-3">
