--- a/overview/index.html
+++ b/overview/index.html
@@ -107,7 +107,7 @@
                     
                     <div class="intro-text col-sm-12 col-md-7 align-self-center">
                         <p class="story-intro">
-                            Texas has the eighth highest rate of new HIV diagnoses in the US and its dependent territories, with a new diagnosis rate of 15.7/100,000 people in 2018. That represents a decrease from 2009, but most of that decrease had occurred by 2013, leaving the rate stable for the last five years of data. 
+                            Texas has the eighth highest rate of new HIV diagnoses in the US and its dependent territories, with a new diagnosis rate of 15.7/100,000 people in 2018. That represents a small but steady decrease from 2009, when the rate was 17.7/100,000 people. 
                         </p>
                         <p class="story-intro">
                             The overall rate also obscured considerable geographic, racial/ethnic, age and gender disparities. Rates of new HIV diagnoses are highest among males (26.0/100,000), Blacks (46.0/100,000), and those between 25 and 29 years of age (45.2/100,000), and the greatest increase in the proportion of new HIV diagnoses was among Hispanic MSM, from 23.6% to 30.3% of new diagnoses. 
@@ -117,7 +117,7 @@
                         </p>
                     </div>
                     <div class="intro-graphic col-sm-12 col-md-5 align-self-center">
-                        <img src="../assets/img/HIVmap-07.svg" alt="">
+                        <img src="../assets/img/overview/HIVmapmaroon-01.svg" alt="">
                     </div>
                 </div>
                 
