--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
                 <div class="banner-overlay2"></div>
             </div>
             <div class="overview-row row">
-                <div class="col-md-7 align-self-center overview-text">
+                <div class="col-lg-7 col-md-6 align-self-center overview-text">
                     <h1>
                         A statistical overview of HIV in Texas
                     </h1>
@@ -134,7 +134,7 @@
                         </button>
                     </a>
                 </div>
-                <div class="col-md-5 int-map">
+                <div class="col-lg-5 col-md-6 int-map">
                     <!-- <img src="./assets/img/HIVmap-07.svg" alt=""> -->
                     <div class="flourish-embed flourish-map" data-src="visualisation/2810954" data-url="https://flo.uri.sh/visualisation/2810954/embed"><script src="https://public.flourish.studio/resources/embed.js"></script></div>                </div>
                 
