--- a/overview/index.html
+++ b/overview/index.html
@@ -193,14 +193,15 @@
 
                 <div class="story-sec">
                     <h2>
-                        New Diagnoses Rates Trends in Texas
+                        New Diagnoses - Trends in Texas
                     </h2>
                     <div class="row d-flex justify-content-between">
                         <!-- <ul class="story-h col-md-0">
                         </ul> -->
                         <!-- <div class="row story-h col-md-12 d-flex justify-content-between"> -->
                             <div class="col-lg-6">
-                                <h4>New Diagnoses Rates in Texas 2007 - 2017 (overall)</h4>
+                                <h4>New Diagnoses in Texas 2009-2018
+                                </h4>
                                 <!-- <div class=""> -->
                                     <img src="../assets/img/overview/tables1.png" alt="">
                                 <!-- </div> -->
