--- a/overview/index.html
+++ b/overview/index.html
@@ -112,8 +112,9 @@
                         <p class="story-intro">
                             The overall rate also obscured considerable geographic, racial/ethnic, age and gender disparities. Rates of new HIV diagnoses are highest among males (26.0/100,000), Blacks (46.0/100,000), and those between 25 and 29 years of age (45.2/100,000), and the greatest increase in the proportion of new HIV diagnoses was among Hispanic MSM, from 23.6% to 30.3% of new diagnoses. 
                         </p>
-                        <p class="story-intro">
-                            The maps and charts below represent a brief overview of these rates, trends, and disparities. 
+                        <hr>
+                        <p class="story-intro lastP">
+                            The maps and charts below represent a brief overview of these rates, trends, and disparities. Data is taken from the <a target="_blank" href="http://www.dshs.texas.gov/hivstd/reports/HIVSurveillanceReport.pdf">Texas HIV Surveillance Report, 2018</a> (HIV/STD Epidemiology and Surveillance Branch, Texas Department of State Health Services).
                         </p>
                     </div>
                     <div class="intro-graphic col-sm-12 col-md-5 align-self-center">
@@ -215,7 +216,7 @@
                     </div>
                 </div>
 
-                <div class="story-sec">
+                <div class="story-sec noBorder">
                     <h2>
                         New Diagnoses Rates in Texas, 2018
                     </h2>
