--- a/overview/index.html
+++ b/overview/index.html
@@ -222,7 +222,7 @@
                     </h2>
                     <div class="row story-h col-md-12 d-flex justify-content-between">
                         <div class="col-lg-6">
-                            <h4>New HIV Diagnisis Rates by Age at Diagnosis, 2018</h4>
+                            <h4>New HIV Diagnosis Rates by Age at Diagnosis, 2018</h4>
                             <img src="../assets/img/overview/bar1.png" alt="">
                         </div>
                         <div class="col-lg-6">
