--- a/contact/index.html
+++ b/contact/index.html
@@ -136,9 +136,9 @@
                 <div class="foot-logo uthne-logo">
                     <img src="../assets/img/uthne.svg" alt="The University of texas health science center at Tyler">
                 </div>
-                <div class="foot-logo dshs-logo">
+                <!-- <div class="foot-logo dshs-logo">
                     <img src="../assets/img/dshs.png" alt="Texas health and human services">
-                </div>
+                </div> -->
                 <!-- <img src="./assets/img/uts-logo.svg" alt="UT system logo"> -->
             </div>
             <!-- <p>For more information on the Texas Child Mental Health Care Consortium, please contact <a href= "mailto:tcmhcc@utsystem.edu">tcmhcc@utsystem.edu</a></p> -->
