--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
                     <a href="./initiatives/index.html">
                         <div class="init-card">
                             <h2>
-                                Learning Collaborative for HIV Education
+                                Learning Collaboratives
                             </h2>
                             <img src="./assets/img/init-edu.jpg" alt="">
                             <div class="init-overlay"></div>
@@ -156,7 +156,16 @@
                     <a href="./initiatives/index.html">
                         <div class="init-card">
                             <h2>
-                                Learning Collaborative for Best practices in HIV Prevention
+                                Surveys
+                            </h2>
+                            <img src="./assets/img/init-practice.jpg" alt="">
+                            <div class="init-overlay"></div>
+                        </div>
+                    </a>
+                    <a href="./initiatives/index.html">
+                        <div class="init-card">
+                            <h2>
+                                Scoping Reviews
                             </h2>
                             <img src="./assets/img/init-practice.jpg" alt="">
                             <div class="init-overlay"></div>
