--- a/mission-goals/index.html
+++ b/mission-goals/index.html
@@ -114,7 +114,7 @@
                         MISSION
                     </h2>
                     <p>
-                        The mission of the TCHEP is to advance widespread adoption of HIV screening and other biomedical prevention interventions such as pre-exposure prophylaxis (PrEP), post- exposure prophylaxis (PEP), and condom use as standards of care in healthcare settings in Texas through policy changes and education of current and future clinicians.
+                        The mission of the TCHEP is to advance widespread adoption of routine HIV screening and other biomedical prevention interventions such as pre-exposure prophylaxis (PrEP) and post- exposure prophylaxis (PEP) as standards of care in healthcare settings in Texas through policy changes and education of current and future clinicians.
                     </p>
                     <h2>
                         GOALS
